--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>City Guide Kate Kim</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://use.typekit.net/zty4fip.css">
+  <link href="https://fonts.cdnfonts.com/css/cascadia-code" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/styles.css" rel="stylesheet">
+</head>
 
+<body>
+  <main>
+    <header>
+        <div class="center">
+            <h1>City Guide</h1>
+            <h2><em>The iconic city - Busan</em></h2>
+        </div>
+    </header>
+
+    <article>
+        <section class="section1">
+                <h3>About</h3>
+                <p>Busan (Korean: 부산; Korean pronunciation: [pusan]), officially Busan Metropolitan City, is South Korea's second most populous city after Seoul, with a population of over 3.4 million inhabitants as of 2017.[5] Formerly romanized as Pusan (and Fuzan under Japanese rule), it is the economic, cultural and educational center of southeastern South Korea, with its port being South Korea's busiest and the sixth-busiest in the world.The surrounding "Southeastern Maritime Industrial Region" (including Ulsan, South Gyeongsang, Daegu, and some of North Gyeongsang and South Jeolla) is South Korea's largest industrial area. The large volumes of port traffic and urban population in excess of 1 million make Busan a Large-Port metropolis using the Southampton System of Port-City classification.</p>
+              </div>
+        </section>
+         
+        <section class="section2">
+  
+          <h2>Instructions</h2>
+  
+          <div class="row">
+            <div class="column">
+              <img src="https://imageio.forbes.com/specials-images/imageserve/656e56e99db288fb64e877b2/Busan-Cityscape/960x0.jpg?format=jpg&width=960" alt="busan" style="width:100%">
+              <p>1. Gather all your tools and ingredients. <strong>Lightly oil and sugar</strong> a flat metal spatula. Add the <strong>sugar to the stainless steel ladle</strong> and hold over medium low heat.</p>
+            </div>
+            <div class="column">
+              <img src="https://images.squarespace-cdn.com/content/v1/63f8b23b0626755198127ae3/1677503564499-4OD9ZL7AN2FK3CSTO31V/busan-21-gamcheon-culture-village.jpg" alt="busan" style="width:100%">
+              <p>2. Let the <strong>sugar melt along the edges until it’s clear, then stir with a wooden chopstick, until the sugar is melted</strong> and starts to caramelize. The sugar should be <strong>clear and lightly amber.</strong></p>
+            </div>
+            <div class="column">
+                <img src="https://a.cdn-hotels.com/gdcs/production176/d623/3df37be5-048e-4e15-a416-2ab6705ece8b.jpg" alt="busan" style="width:100%">
+                <p>3. Move the ladle off the heat and <strong>stir in the baking soda,</strong> quickly until it <strong>starts to foam and turn a light caramel color</strong>. Move the ladle between on and off the heat to keep it warm.</p>
+            </div>
+        </div>
+
+        <ul><span class= "links for tickets">
+            <li><a href="https://en.wikipedia.org/wiki/Away_from_Home_Tour">Away from Home Tour (2010)</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Club_Paradise_Tour">Club Paradise Tour (2012)</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Would_You_Like_a_Tour%3F">Would You Like a Tour? (2013–2014)</a></li></span>
+        </ul>
+        </section>
+    </article>
+
+    <footer>
+        <p>All Sources are from <a href="https://en.wikipedia.org/wiki/Busan">wikipedia</a></p>
+    </footer>
+    </main>
+
+</body>
+</html>
