--- a/index.html
+++ b/index.html
@@ -20,40 +20,90 @@
 
     <article>
         <section class="section1">
-                <h3>About</h3>
-                <p>Busan (Korean: 부산; Korean pronunciation: [pusan]), officially Busan Metropolitan City, is South Korea's second most populous city after Seoul, with a population of over 3.4 million inhabitants as of 2017.[5] Formerly romanized as Pusan (and Fuzan under Japanese rule), it is the economic, cultural and educational center of southeastern South Korea, with its port being South Korea's busiest and the sixth-busiest in the world.The surrounding "Southeastern Maritime Industrial Region" (including Ulsan, South Gyeongsang, Daegu, and some of North Gyeongsang and South Jeolla) is South Korea's largest industrial area. The large volumes of port traffic and urban population in excess of 1 million make Busan a Large-Port metropolis using the Southampton System of Port-City classification.</p>
-              </div>
-        </section>
-         
-        <section class="section2">
-  
-          <h2>Instructions</h2>
-  
-          <div class="row">
-            <div class="column">
-              <img src="https://imageio.forbes.com/specials-images/imageserve/656e56e99db288fb64e877b2/Busan-Cityscape/960x0.jpg?format=jpg&width=960" alt="busan" style="width:100%">
-              <p>1. Gather all your tools and ingredients. <strong>Lightly oil and sugar</strong> a flat metal spatula. Add the <strong>sugar to the stainless steel ladle</strong> and hold over medium low heat.</p>
-            </div>
-            <div class="column">
-              <img src="https://images.squarespace-cdn.com/content/v1/63f8b23b0626755198127ae3/1677503564499-4OD9ZL7AN2FK3CSTO31V/busan-21-gamcheon-culture-village.jpg" alt="busan" style="width:100%">
-              <p>2. Let the <strong>sugar melt along the edges until it’s clear, then stir with a wooden chopstick, until the sugar is melted</strong> and starts to caramelize. The sugar should be <strong>clear and lightly amber.</strong></p>
-            </div>
-            <div class="column">
-                <img src="https://a.cdn-hotels.com/gdcs/production176/d623/3df37be5-048e-4e15-a416-2ab6705ece8b.jpg" alt="busan" style="width:100%">
-                <p>3. Move the ladle off the heat and <strong>stir in the baking soda,</strong> quickly until it <strong>starts to foam and turn a light caramel color</strong>. Move the ladle between on and off the heat to keep it warm.</p>
-            </div>
-        </div>
+            <h3>About</h3>
+                <p><strong>Busan</strong> (Korean: 부산; Korean pronunciation: [pusan]), officially Busan Metropolitan City, is South Korea's second most populous city after Seoul, with a population of over 3.4 million inhabitants as of 2017.[5] Formerly romanized as Pusan (and Fuzan under Japanese rule), it is the economic, cultural and educational center of southeastern South Korea, with its port being South Korea's busiest and the sixth-busiest in the world.The surrounding "Southeastern Maritime Industrial Region" (including Ulsan, South Gyeongsang, Daegu, and some of North Gyeongsang and South Jeolla) is South Korea's largest industrial area. The large volumes of port traffic and urban population in excess of 1 million make Busan a Large-Port metropolis using the Southampton System of Port-City classification.</p>
 
-        <ul><span class= "links for tickets">
-            <li><a href="https://en.wikipedia.org/wiki/Away_from_Home_Tour">Away from Home Tour (2010)</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Club_Paradise_Tour">Club Paradise Tour (2012)</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Would_You_Like_a_Tour%3F">Would You Like a Tour? (2013–2014)</a></li></span>
-        </ul>
+                <h3>5 points of interest</h3>
+                <ul>
+                    <li>As the 6th largest port in the world, the port of Busan processed 21.81 million TEU of container cargo volume in 2020</li>
+                    <li>The city is also known for its global MICE (Meetings, Incentives, Conferences, and Exhibitions) industry. The city's convention and exhibition zone have excellent conditions and infrastructure to host large-scale international events, which includes BEXCO in Centum City, Nurimaru APEC House, and hotels nearby natural environments</li>
+                    <li>With a length of 7.62 km (4.73 mi) and a size of 2.66 km2 (1.03 sq mi), designated as Natural Monument No. 179, Daejeo Ecological Park is a habitat for migratory birds at the Nakdong River Estuary.</li>
+                    <li>The closest overseas area to Busan is Tsushima, Japan, with a distance of about 49.5 km (30.8 mi). The closest Japanese mainland area to Busan is Fukuoka, and the distance from Busan to Fukuoka is about 180 km (112 miles). Busan and Fukuoka are sister cities.</li>
+                    <li>Busan is the 2nd largest city in Korea, a maritime logistics hub in Northeast Asia with its world-class mega ports, and a gateway to the Eurasian continent.</li>
+                  </ul>
         </section>
+
+        <!-- section 2 - places -->
+        <section class="section2">
+            <h3>Places</h3>
+            <div class="row">
+              <div class="column" id="busan-cityscape">
+                <img src="https://imageio.forbes.com/specials-images/imageserve/656e56e99db288fb64e877b2/Busan-Cityscape/960x0.jpg?format=jpg&width=960" alt="Busan cityscape" style="width:100%">
+                <p><strong>Busan</strong> is the 2nd largest city in Korea, a maritime logistics hub in Northeast Asia with its world-class mega ports, and a gateway to the Eurasian continent.</p>
+              </div>
+              <div class="column" id="gamcheon-village">
+                <img src="https://images.squarespace-cdn.com/content/v1/63f8b23b0626755198127ae3/1677503564499-4OD9ZL7AN2FK3CSTO31V/busan-21-gamcheon-culture-village.jpg" alt="Gamcheon Cultural Village" style="width:100%">
+                <p><strong>Gamcheon Cultural Village</strong> was created in the 1950s as a residential community along a mountain slope. The houses in the village are built in a staircase fashion.</p>
+              </div>
+              <div class="column" id="central-business-district">
+                <img src="https://a.cdn-hotels.com/gdcs/production176/d623/3df37be5-048e-4e15-a416-2ab6705ece8b.jpg" alt="Central Business District" style="width:100%">
+                <p><strong>The Gwangbok-dong, Nampo-dong, and Jungang-dong</strong> areas form the old central business district. Some of the restaurants in this district use family recipes passed down through the generations.</p>
+              </div>
+            </div>
+            <h3>Top Attractions</h3>
+            <table>
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Location</th>
+                  <th>Entry Fee</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr id="haeundae-beach">
+                  <td>Haeundae Beach</td>
+                  <td>Haeundae District</td>
+                  <td>Free</td>
+                </tr>
+                <tr id="gamcheon-cultural-village">
+                  <td>Gamcheon Cultural Village</td>
+                  <td>Saha District</td>
+                  <td>Free</td>
+                </tr>
+                <tr id="taejongdae-resort-park">
+                  <td>Taejongdae Resort Park</td>
+                  <td>Yongdo District</td>
+                  <td>Free</td>
+                </tr>
+              </tbody>
+            </table>
+            <form id="Attraction">
+                <label for="fee">Attraction choice:</label>
+                <input type="attraction" id="attraction" name="attraction" placeholder="attraction" required>
+                <button type="reservation">Submit</button>
+            </form>
+          </section>          
+
+        <!-- section 3 - education website external links -->
+        <section class="section3">
+            <h3>Links for Education website</h3>
+            <ul>
+              <li><a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a></li>
+              <li><a href="https://eng.cup.ac.kr/main/main.asp">Catholic University of Pusan</a></li>
+              <li><a href="https://english.donga.ac.kr/english/Main.do">Dong-a University</a></li>
+            </ul>
+          </section>          
+
+          <section class="section5">
+            <h3>Busan in Google maps</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d208684.27366703638!2d128.86885495554557!3d35.18923402043419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568eb6de823cd35%3A0x35d8cb74247108a7!2sBusan%2C%20South%20Korea!5e0!3m2!1sen!2sus!4v1707073902050!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </section>
+
+          
     </article>
 
     <footer>
-        <p>All Sources are from <a href="https://en.wikipedia.org/wiki/Busan">wikipedia</a></p>
+        <p>All Sources are from <a href="https://en.wikipedia.org/wiki/Busan" target="_blank">Wikipedia</a></p>
     </footer>
     </main>
 
